Added dwarf subraces

--- a/src/main/resources/assets/pumpkin_patch/lang/en_us.json
+++ b/src/main/resources/assets/pumpkin_patch/lang/en_us.json
@@ -5,5 +5,6 @@
 
   "itemGroup.pumpkin_patch.pumpkin_patch": "Pumpkin Patch",
 
-  "layer.pumpkin_patch.races.name": "Race"
+  "layer.pumpkin_patch.races.name": "Race",
+  "layer.pumpkin_patch.subraces.name": "Subrace"
 }
